@startuml
' ================================
' MODELO DE DOMINIO DEL RESTAURANTE
' ================================

' --------- ENUMS ---------
enum EstadoMesa {
  LIBRE
  OCUPADA
  RESERVADA
}

' --------- CLASE PRODUCTO ---------
class Producto {
  - id : int
  - nombre : String
  - precio : double
  - disponible : boolean
  + getPrecio() : double
  + setPrecio(precio : double)
  + toString() : String
}

' --------- CLASES HIJAS DE PRODUCTO ---------
class Bebida extends Producto {
  - tamanio : String
  - conAlcohol : boolean
}

class Comida extends Producto {
  - tipo : String
  - tiempoPreparacion : int
}

class Postre extends Producto {
  - tipo : String
  - tieneHelado : boolean
}

' --------- CLASE PEDIDO ITEM ---------
class PedidoItem {
  - producto : Producto
  - cantidad : int
  + getSubtotal() : double
}

' --------- CLASE PEDIDO ---------
class Pedido {
  - id : int
  - mesa : Mesa
  - items : List<PedidoItem>
  - total : double
  + agregarItem(item : PedidoItem)
  + calcularTotal() : double
  + toString() : String
}

' --------- CLASE MESA ---------
class Mesa {
  - numero : int
  - estado : EstadoMesa
  - pedidos : List<Pedido>
  + ocupar()
  + liberar()
  + agregarPedido(pedido : Pedido)
}

' --------- RELACIONES ---------
Producto <|-- Bebida
Producto <|-- Comida
Producto <|-- Postre

Pedido "1" --> "1..*" PedidoItem : contiene >
PedidoItem "1" --> "1" Producto : refiere >
Mesa "1" --> "0..*" Pedido : registra >

@enduml
